--- a/Template/template.html
+++ b/Template/template.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Multiplos cases</title>
+    <link rel="stylesheet" href="_css/estilo.css">
 </head>
+
 <body>
     <div>
-    <?php
-    
 
-    
-    ?>
     </div>
 </body>
+
 </html>
